# VAE_Docker

./: Docker.txt  Dockerfile  ImageDataGenerator.py  ImageDataHandling.py  README.md  VAE_callbacks.py  VAE_movie.py  run_movie.py  saved_model.py  test.py  vali_movie.py
c++/: CMakeLists.txt
c++/src/: main.cpp
